// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test dragCreate > add element to the scene when pointer dragging long enough > diamond 3`] = `1`;

exports[`Test dragCreate > add element to the scene when pointer dragging long enough > diamond 4`] = `
{
  "angle": 0,
  "backgroundColor": "#ffffff",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 0,
  "roundness": null,
  "seed": 1278240551,
  "strokeColor": "#6C6866",
  "strokeStyle": "solid",
  "strokeWidth": 4,
  "type": "diamond",
  "updated": 1,
  "version": 3,
  "versionNonce": 401146281,
  "width": 30,
  "x": 30,
  "y": 20,
}
`;

exports[`Test dragCreate > add element to the scene when pointer dragging long enough > ellipse 3`] = `1`;

exports[`Test dragCreate > add element to the scene when pointer dragging long enough > ellipse 4`] = `
{
  "angle": 0,
  "backgroundColor": "#ffffff",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 0,
  "roundness": null,
  "seed": 1278240551,
  "strokeColor": "#6C6866",
  "strokeStyle": "solid",
  "strokeWidth": 4,
  "type": "ellipse",
  "updated": 1,
  "version": 3,
  "versionNonce": 401146281,
  "width": 30,
  "x": 30,
  "y": 20,
}
`;

exports[`Test dragCreate > add element to the scene when pointer dragging long enough > line 3`] = `
{
  "angle": 0,
  "backgroundColor": "#ffffff",
  "boundElements": null,
  "customData": undefined,
  "endArrowhead": null,
  "endBinding": null,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      30,
      50,
    ],
  ],
  "polygon": false,
  "roughness": 0,
  "roundness": null,
  "seed": 1278240551,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#6C6866",
  "strokeStyle": "solid",
  "strokeWidth": 4,
  "type": "line",
  "updated": 1,
  "version": 4,
  "versionNonce": 2019559783,
  "width": 30,
  "x": 30,
  "y": 20,
}
`;

exports[`Test dragCreate > add element to the scene when pointer dragging long enough > rectangle 3`] = `1`;

exports[`Test dragCreate > add element to the scene when pointer dragging long enough > rectangle 4`] = `
{
  "angle": 0,
  "backgroundColor": "#ffffff",
  "boundElements": null,
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 0,
  "roundness": null,
  "seed": 1278240551,
  "strokeColor": "#6C6866",
  "strokeStyle": "solid",
  "strokeWidth": 4,
  "type": "rectangle",
  "updated": 1,
  "version": 3,
  "versionNonce": 401146281,
  "width": 30,
  "x": 30,
  "y": 20,
}
`;
